# SyncAgent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENCE  README.md  TODO.md  TODO_last.md  alembic.ini  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml
docs/: SPECS.md  api.md  architecture.md  code-organization-spec.md  conflicts.md  database-schema.md  state-simplification-analysis.md  sync-scenarios.md
docs/cli/: export-key.md  import-key.md  init.md  network-resilience.md  register.md  reset.md  server.md  sync.md  unlock.md  watch-mode.md
src/syncagent/: __init__.py
src/syncagent/client/: __init__.py  api.py  cli.py  index.py  keystore.py  notifications.py  protocol.py  state.py  status.py  sync.py  tray.py  watcher.py
src/syncagent/client/cli/: __init__.py  config.py  keystore.py  protocol.py  register.py  server.py  sync.py  tray.py
src/syncagent/client/sync/: __init__.py  change_scanner.py  conflict.py  coordinator.py  download.py  engine.py  ignore.py  queue.py  remote_listener.py  retry.py  types.py  upload.py  watcher.py
src/syncagent/client/sync/domain/: __init__.py  conflicts.py  decisions.py  priorities.py  transfers.py  versions.py
src/syncagent/client/sync/transfers/: __init__.py  upload.py
src/syncagent/client/sync/workers/: __init__.py  base.py  delete.py  delete_worker.py  download.py  download_worker.py  pool.py  upload.py  upload_worker.py
src/syncagent/client/sync/workers/transfers/: __init__.py  conflict.py  file_downloader.py  file_uploader.py
src/syncagent/core/: __init__.py  chunking.py  config.py  crypto.py  types.py
src/syncagent/server/: __init__.py  app.py  database.py  models.py  scheduler.py  schemas.py  storage.py  web.py  ws.py
src/syncagent/server/api/: admin.py  changes.py  chunks.py  deps.py  files.py  health.py  machines.py  router.py  trash.py
src/syncagent/server/migrations/: env.py
src/syncagent/server/migrations/versions/: 0d820a62461d_initial_schema.py  a29c5eaaecdf_add_admin_session_invitation_tables.py  f8226aa5b304_add_change_log_table.py
src/syncagent/server/templates/: base.html  machines.html  setup.html
src/syncagent/server/web/: __init__.py  router.py
src/syncagent/server/web/templates/: base.html  dashboard.html  files.html  invitations.html  login.html  machines.html  setup.html  trash.html
tests/: __init__.py  test_chunking.py  test_cli.py  test_crypto.py  test_index.py  test_keystore.py
tests/client/: __init__.py  test_api.py  test_coordinator.py  test_domain.py  test_notifications.py  test_protocol.py  test_queue.py  test_remote_listener.py  test_state.py  test_status.py  test_sync.py  test_tray.py  test_watcher.py  test_workers.py
tests/core/: test_config.py
tests/integration/: __init__.py  conftest.py  test_conflict_e2e.py  test_sync_e2e.py
tests/integration/cli/: conftest.py  fixtures.py  test_advanced_multi_client.py  test_conflicts.py  test_deletion_edge_cases.py  test_export_import_key.py  test_filesystem_errors.py  test_init.py  test_multi_client.py  test_network_resilience.py  test_password_edge_cases.py  test_register.py  test_server_command.py  test_special_characters.py  test_sync.py  test_sync_latency.py  test_watch_mode.py  test_websocket_push.py
tests/server/: test_admin_api.py  test_api.py  test_changes_api.py  test_database.py  test_scheduler.py  test_storage.py  test_web.py  test_ws.py
