[project]
name = "syncagent"
version = "0.1.0"
description = "Zero-Knowledge E2EE file synchronization system"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Julien Dubiel" }
]
keywords = ["sync", "e2ee", "encryption", "file-sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Mirroring",
]

dependencies = [
    # CLI
    "click>=8.1.0,<9.0.0",

    # Crypto
    "cryptography>=44.0.0,<45.0.0",
    "argon2-cffi>=25.1.0,<26.0.0",

    # HTTP client
    "httpx>=0.28.0,<0.29.0",

    # WebSocket client (sync temps réel)
    "websockets>=14.0,<15.0",

    # File watching
    "watchdog>=6.0.0,<7.0.0",

    # Content-Defined Chunking
    "fastcdc>=1.5.0,<2.0.0",

    # Keyring (OS credential storage)
    "keyring>=25.5.0,<26.0.0",
]

[project.optional-dependencies]
server = [
    # Web framework
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "python-multipart>=0.0.20,<0.1.0",

    # Templating
    "jinja2>=3.1.5,<4.0.0",

    # Database ORM + migrations
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.14.0,<2.0.0",

    # S3 storage
    "boto3>=1.35.0,<2.0.0",

    # Scheduler for automatic trash purge
    "apscheduler>=3.10.0,<4.0.0",
]

tray = [
    # System tray icon (maintenance inactive but stable)
    "pystray>=0.19.5,<0.20.0",
    "pillow>=11.0.0,<12.0.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Type stubs for mypy
    "types-boto3>=1.0.0",
    # S3 mocking
    "moto>=5.0.0",
    # Pre-commit hooks
    "pre-commit>=4.0.0",
]

all = [
    "syncagent[server,tray,dev]",
]

[project.scripts]
syncagent = "syncagent.client.cli:main"

[project.urls]
Homepage = "https://github.com/juliendubiel/syncagent"
Documentation = "https://github.com/juliendubiel/syncagent#readme"
Repository = "https://github.com/juliendubiel/syncagent"
Issues = "https://github.com/juliendubiel/syncagent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syncagent"]

[tool.ruff]
target-version = "py313"
line-length = 140

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["syncagent"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "fastcdc", "fastcdc.*",
    "keyring", "keyring.*",
    "boto3", "boto3.*",
    "botocore", "botocore.*",
    "mypy_boto3_s3",
    "sqlalchemy", "sqlalchemy.*",
    "alembic", "alembic.*",
    "PIL", "PIL.*",
    "pystray", "pystray.*",
    "winreg",
    "apscheduler", "apscheduler.*",
]
ignore_missing_imports = true

# Files with platform-specific code that need different type: ignore comments on different platforms
[[tool.mypy.overrides]]
module = [
    "syncagent.client.protocol",
    "syncagent.client.tray",
]
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 120  # 2 minutes per test to catch hangs
markers = [
    "slow: marks tests as slow (100MB+ file transfers)",
]
filterwarnings = [
    # pytest-timeout config option not recognized by older pytest versions
    "ignore:Unknown config option. timeout:pytest.PytestConfigWarning",
    # websockets library deprecation (will be fixed in future uvicorn/websockets versions)
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
    "ignore:remove second argument of ws_handler:DeprecationWarning",
    # starlette testclient cookie deprecation
    "ignore:Setting per-request cookies=:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/syncagent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]